--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -1,3 +1,5 @@
+# server/src/main/resources/application.properties
+
 # Configuracion general
 spring.application.name=GestionTaller
 server.port=8080
@@ -9,12 +11,16 @@ spring.datasource.password=Ale13091992!
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # Configuracion JPA/Hibernate
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
 
 # Configuracion de Flyway (migraciones)
 spring.flyway.enabled=true
 spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
+spring.flyway.clean-disabled=false
+# Solo para entorno de desarrollo
+spring.flyway.clean-on-validate-error=true
+spring.flyway.repair-on-migrate=true
