--- a/server/src/main/resources/application.properties
+++ b/server/src/main/resources/application.properties
@@ -22,3 +22,12 @@ spring.flyway.locations=classpath:db/migration
 spring.flyway.baseline-on-migrate=true
 spring.flyway.clean-disabled=false
 spring.flyway.repair-on-migrate=true
+
+# Logging para depuración
+logging.level.org.springframework.web=DEBUG
+logging.level.org.springframework.security=DEBUG
+logging.level.com.gestiontaller=DEBUG
+
+# Aumentar tiempo de espera para depuración
+spring.mvc.async.request-timeout=60000
+server.tomcat.connection-timeout=60000
