--- a/server/pom.xml
+++ b/server/pom.xml
@@ -75,6 +75,12 @@
             <artifactId>nashorn-core</artifactId>
             <version>15.4</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.gestiontaller</groupId>
+            <artifactId>common</artifactId>
+            <version>${project.version}</version>
+        </dependency>
     </dependencies>
 
     <build>
