--- a/client/pom.xml
+++ b/client/pom.xml
@@ -81,6 +81,18 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
             </plugin>
+
+            <plugin>
+                <groupId>org.openjfx</groupId>
+                <artifactId>javafx-maven-plugin</artifactId>
+                <version>0.0.8</version>
+                <configuration>
+                    <mainClass>com.gestiontaller.client.JavaFxApplication</mainClass>
+                    <jlinkImageName>GestionTallerClient</jlinkImageName>
+                    <launcher>launcher</launcher>
+                    <jlinkZipName>GestionTallerClientApp</jlinkZipName>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
